--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#35a9e3f9,#45c0fded);
+                 background: -webkit-linear-gradient(#36ade9f9,#54c6ffee);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
@@ -217,8 +217,8 @@
 
 .TYK1:hover{
   transform: rotate(360deg);
-  transition: 0.99s ease;
-  box-shadow: -1px 1px 0.14rem 1px rgb(131, 15, 63);
+  transition: 0.4s ease-in;
+  box-shadow: -1px 0.15px 0.2rem 1px rgb(99, 16, 45);
 }
 
           .navbar0{
@@ -995,7 +995,7 @@ height: 728px;
   justify-content: center; 
   align-items: center; 
   background: transparent; 
-  border: 0.14rem solid #bababa; 
+  border: 0.13rem solid #b3b3b3; 
   border-radius: 50%; 
   font-family: 'georgia'; 
   font-size: 20px; 
@@ -1138,7 +1138,7 @@ height: 240px;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 300px;
+  height: 350px;
   font-size: 17.5px; 
   color: rgba(11, 11, 11, 0.983);
   line-height: 30px;
@@ -1532,7 +1532,7 @@ function myFunction() {
               <br><b style="color:#ff0a06">Tiki N'Yiki</b> est une vision-cadre pour promouvoir, défendre et protéger les droits des personnes handicapées et particuliérement les enfants handicapés. Lancée en 2016, Tiki N'Yiki veut contribuer à un bel épanouissment des enfants handicapés en soutenant toute initiative encourageant leur éducation pour une meilleure inclusion sociale au Burkina Faso. 
               <br>
               <br>
-              Etymologiquement Tiki N'Yiki est composé de deux (2) mots <a href="https://fr.wikipedia.org/wiki/Moré" target="blank">du Mooré (Moré)</a> [<b>Tiki et N'Yiki</b>] une langue au <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="blank">Burkina Faso</a>:           
+              Etymologiquement Tiki N'Yiki est composé de deux (2) mots <a href="https://fr.wikipedia.org/wiki/Moré" target="blank">du Mooré (Moré)</a> [<b>Tiki et N'Yiki</b>] une langue au <a href="https://en.wikipedia.org/wiki/Burkina_Faso" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="blank">Burkina Faso</a>:           
               <br>
               <br>
               <b style="color:#ff0a06">a. Tiki</b> signifie <b style="color:green">Appuie-toi</b>
@@ -1560,7 +1560,7 @@ function myFunction() {
               <a href="https://www.gouvernement.gov.bf/accueil" target="_blank"> Le Burkina Faso ou pays des hommes intègres</a> est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de :
         <br>
         <br>
-        <em style="color: rgb(41, 101, 197)">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" target="_blank">[Sources: Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" target="_blank"> [Sources: UNFPA]</a>. 
+        <em style="color: rgb(41, 101, 197)">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Sources: Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank"> [Sources: UNFPA]</a>. 
           <br>
           Il partage des frontières au nord, nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.  
         </em>  
@@ -1570,7 +1570,7 @@ function myFunction() {
         <br> 
         Par ailleurs son économie reste fortement impactée par une crise sécuritaire qui sécoue la sous-région y compris le Mali et le Niger dont il partage des frontières communes et le tout dans une réalité d'inflation globale. Ce qui rend incertain les lendemains pour de nombreux Burkinabès surtout les déplacés internes.     
           
-        Malgré une population croissante de plus de 3 226 627 de personnes handicapées <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" target="_blank"> [Sources: African Disability - 2020 Rights Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est causé soit par la Polio (poliomyétlie), soit d'autres maladies, de vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
+        Malgré une population croissante de plus de 3 226 627 de personnes handicapées <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;"target="_blank"> [Sources: African Disability - 2020 Rights Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est causé soit par la Polio (poliomyétlie), soit d'autres maladies, de vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
         <br> 
         <br> 
         Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
@@ -1617,7 +1617,7 @@ function myFunction() {
         <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'acceptation et d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré la différence mais en jouissant de leurs droits.
          
          <br>
-         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe. <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" target="_blank">Les fréquentes discriminations et l'exclusion les rongent au quotidien</a>. 
+         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe. <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">Les fréquentes discriminations et l'exclusion les rongent au quotidien</a>. 
          Alors si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il leur sera difficile de rencontrer des opportunités afin de se réaliser. 
          Le fait que des gens qui devraient être les premiers à être soutenus, se retrouvent complètement oubliés et relégués aux derniers rangs, est non seulement horrible mais indique l'état des mentalités et l'environnement exclusif vis-à-vis de la différence. 
 <br>
@@ -1672,7 +1672,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 </span>
   <p>
     <br>
-    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" target="_blank">sévères marginalisations de l'état qui était censée les aider ou même de la communauté.</a>.
+    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">sévères marginalisations de l'état qui était censée les aider ou même de la communauté.</a>.
     <br>  
     <br>
     Sinon pourquoi des personnes handicapées dépendantes et vivant isolées sont oubliées quand on doit leur apporter à manger ou à boire, les faire prendre un bain ou leur apporter un besoin quelconque ?
@@ -1874,14 +1874,14 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <b style="color: green"> A. Des activités prescolaires</b> pour enfants en situation de handicap car ces derniers ne sont toujours pas les bienvenus dans certains établissements. 
     <br>
     <br>
-    <b style="color: green">B. <a href="https://dictionnaire.reverso.net/francais-definition/soutien+scolaire" target="_blank"> Des cours de soutien</a> pour étudiant-es</b> sont implementés suite à une demande croissante d'étudiant-es qui voudraient avoir plus d'explications sur des cours mal compris en classe et que dans la timidité certaines questions n'ont pas pu être posées au professeur. 
+    <b style="color: green">B. <a href="https://dictionnaire.reverso.net/francais-definition/soutien+scolaire" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank"> Des cours de soutien</a> pour étudiant-es</b> sont implementés suite à une demande croissante d'étudiant-es qui voudraient avoir plus d'explications sur des cours mal compris en classe et que dans la timidité certaines questions n'ont pas pu être posées au professeur. 
     Un des moyens de solutionner ce problème était d'organiser des cours de soutien deux fois par semaine pour aider ces étudiant-es grâce à l'aide d'enseignant-es bénévoles nationaux et internationaux ayant adhéré à la vision de Tiki N'Yiki.
     <br>
     <br>
     <b style="color: green">C. Des activités d'éducation et de conscientisation</b> consistant à sensibiliser l'opinion publique sur le HANDICAP et l'inclusion et l'importance pour les personnes différentes qui sont avant tout des humains d'être inclues dans leurs communautés.
     <br>
     <br>
-    <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> Sélection d'un-e étudiant-e handicapé-e comme bénéficiaire d'une bourse d'étude dénommée <b style="color: #ff0a06;">Bourse Tiki N'Yiki</b> dont les critères de sélection sont basés sur l'excellence entre autres et permettrait au récipiendaire de s'inscrire à un programme universitaire de son choix. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires (Condition Obligatoire).
+    <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> Sélection d'un-e étudiant-e handicapé-e comme bénéficiaire d'une bourse d'étude dénommée <a href="#" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">Bourse Tiki N'Yiki</a> dont les critères de sélection sont basés sur l'excellence entre autres et permettrait au récipiendaire de s'inscrire à un programme universitaire de son choix. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires (Condition Obligatoire).
      </p>
     </div>
 
@@ -2181,4 +2181,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
