--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#36ade9f9,#54c6ffee);
+                 background: -webkit-linear-gradient(#35a9e3e0,#4dc1fcf3);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.5px 1.75rem 0.1px #4d4d4d36;
-                 border-bottom: 4.47rem solid #fffffffd;  
+                 box-shadow: 0 0.5px 1.7rem 0.1px #51515142;
+                 border-bottom: 4.47rem solid #fff;  
                  border-top-left-radius: 1.95rem;
                  border-top-right-radius: 1.95rem;
           }
@@ -2181,5 +2181,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
