--- a/index.html
+++ b/index.html
@@ -1147,16 +1147,16 @@ height: 240px;
   font-family: 'Inter' sans sherif;
 }
 
-.CHRZiniare{
+.CHRZiniare {
   width: 100%;
-  height: auto;
-  padding: 5px;
+  height: 250px;
+  border-bottom: 0.5rem solid #017ffe;
 }
 
 
 .CHRZiniare img{
   width: 100%;
-  height: 210px;
+  height: 240px;
 }
 .CHRZiniare:hover{
 transition: 0.46s linear;
@@ -1164,19 +1164,21 @@ transition: 0.46s linear;
 }
 .MediKLogo img{
   width: 100%;
-  height: 210px;
+  height: 240px;
 }
 
 
 
-.MedikLogo{
+.MediKLogo{
   width: 100%;
-  height: auto;
+  height: 250px;
+  border-bottom: 0.5rem solid #017ffe;
   }
 
 .MediKLogo:hover{
 transition: 0.46s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+ 
 }
 
 
@@ -2188,6 +2190,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
 
