--- a/index.html
+++ b/index.html
@@ -2172,7 +2172,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 
     <div class="FTR">
-      <a href="https://www.cairn.info/revue-le-francais-aujourd-hui-2012-2-page-19.htm" target="_blank"> 
+      <a href="https://lefaso.net/spip.php?article119166" target="_blank"> 
     Le Handicap n'est pas une Fatalité !
   
     <br>
@@ -2190,5 +2190,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
