--- a/index.html
+++ b/index.html
@@ -1161,6 +1161,7 @@ height: 240px;
 .CHRZiniare:hover{
 transition: 0.46s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  border: none;
 }
 .MediKLogo img{
   width: 100%;
@@ -1178,7 +1179,7 @@ transition: 0.46s linear;
 .MediKLogo:hover{
 transition: 0.46s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
- 
+  border: none;
 }
 
 
@@ -2190,6 +2191,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
 
