--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 0.5px 1.7rem 0.1px #51515142;
-                 border-bottom: 4.47rem solid #fff;  
+                 border-bottom: 4.40rem solid #fffffffa;  
                  border-top-left-radius: 1.95rem;
                  border-top-right-radius: 1.95rem;
           }
@@ -230,7 +230,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 126px; 
-            background: #ebebebed;
+            background: #e5e5e5ed;
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
@@ -2191,7 +2191,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
-
-
-
 
