--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ hr{
     border-bottom-left-radius: 10rem;
 }
 .content1 a:hover{
-    color: red;
+    color: blue;
 }
 
 .YT{
@@ -757,12 +757,12 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 74%;
     height: auto;
-    font-family: 'Inter' sans sherif;
-    font-size: 17.5px; 
-    color: rgba(11, 11, 11, 0.983);
-    line-height: 30px;
+    line-height: 27px;
+    font-size: 20.5px; 
+    color: rgba(8, 8, 8, 0.897);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    word-spacing: 0.25px;
     padding: 10px;
-    word-spacing: 1px;
 }
 .k1 img{
   width: 100%;
@@ -772,23 +772,24 @@ animation: auto 12s infinite ease-in;
 
 .Noel{
   display: grid;
-  grid-template-columns: 0.5fr 1.5fr;
+  grid-template-columns: 0.5fr 1.3fr;
   justify-content: space-between;
   column-gap: 1rem;
   justify-items: center;
   width: 100%;
   height: auto;
-  padding: 4px;
+  padding: 2px;
 }
 .Noel:hover{
-  padding: 4px;
+  padding: 2px;
   transition: 0.46s linear;
-  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  box-shadow: 8px 8px 0.6rem 0.45px rgba(190, 190, 190, 0.724);
+  border-bottom: 1rem;
 }
 
 .Noel img{
   width: 100%;
-  height: auto;
+  height: 87%;
 }
 
 .kptr{
@@ -856,12 +857,11 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 101%;
     height: auto;
-    font-size: 17.5px; 
-    color: rgba(11, 11, 11, 0.983);
-    line-height: 30px;
-    word-spacing: 1px;
-    font-family: 'Inter' sans sherif;
-  
+    line-height: 27px;
+    font-size: 20.5px; 
+    color: rgba(8, 8, 8, 0.897);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    word-spacing: 0.25px;
 }
 
 .CRT2{
@@ -1017,12 +1017,12 @@ a:visited{
 }
 .Ecole{
   display: grid;
-  grid-template-columns: 0.8fr 1.2fr;
+  grid-template-columns: 0.7fr 1.3fr;
   column-gap: 1.5rem;
   justify-content: center;
   justify-items: center;  
   width: 100%; 
-  height: 30%;
+  height: 24%;
 }
 
 .AK{
@@ -1037,13 +1037,14 @@ a:visited{
 
 .AK:hover{
   padding: 4px;
-  transition: 0.46s linear;
-  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  transition: 0.3s linear;
+  box-shadow: 8px 5px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  border-left: 0.05rem solid rgba(245, 245, 245, 0.948);
 }
 
 .KA:hover{
   transition: 0.46s linear;
-  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  box-shadow: 8px 5px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .student{
@@ -1112,10 +1113,11 @@ height: 240px;
 .TXT{
   width: 100%;
   height: auto;
-  font-size: 17.5px; 
-    color: rgba(11, 11, 11, 0.983);
-    line-height: 30px;
-    font-family: 'Inter' sans sherif;
+  line-height: 27px;
+    font-size: 20.5px; 
+    color: rgba(8, 8, 8, 0.897);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    word-spacing: 0.25px;
     text-align: justify;
 }
 
@@ -1128,9 +1130,11 @@ height: 240px;
     text-align: justify;
     width: 74%;
     height: 920px;
-    font-size: 17.5px; 
-    color: rgba(11, 11, 11, 0.983);
-    line-height: 30px;
+    line-height: 27px;
+    font-size: 20.5px; 
+    color: rgba(8, 8, 8, 0.897);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    word-spacing: 0.25px;
 }
 
 .Healthy{
@@ -1141,10 +1145,11 @@ height: 240px;
   justify-items: center;
   width: 100%;
   height: 350px;
-  font-size: 17.5px; 
-  color: rgba(11, 11, 11, 0.983);
-  line-height: 30px;
-  font-family: 'Inter' sans sherif;
+  line-height: 27px;
+    font-size: 20.5px; 
+    color: rgba(8, 8, 8, 0.897);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    word-spacing: 0.25px;
 }
 
 .CHRZiniare {
@@ -1191,10 +1196,11 @@ transition: 0.46s linear;
   justify-items: center;
   width: 100%;
   height: 680px;
-  font-size: 17.5px; 
-  color: rgba(11, 11, 11, 0.983);
-  line-height: 30px;
-  font-family: 'Inter' sans sherif;
+  line-height: 27px;
+    font-size: 20.5px; 
+    color: rgba(8, 8, 8, 0.897);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    word-spacing: 0.25px;
 }
 
 .Avenue{
@@ -1727,7 +1733,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 22px; color:rgba(31, 31, 211, 0.736)">
+    <div style="padding: 5px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 21px; color:rgba(31, 145, 211, 0.838); font-size: 18.85px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs diverses réactions. 
@@ -1766,6 +1772,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>  
         Certains handicapés n'ont pas de moyens financiers pour s'offrir de moyens de déplacements comme des tricycles. Elles n'ont pas d'aides financières ou de dotations d'équipements auxiliaires de l'état. Certain-es vivent isolé-es dans des coins réculés en campagne et n'ont ni voiture, ni moto ou même un tricycle pour se déplacer. 
         <br>
+        <br>
         <a href="https://dictionnaire.reverso.net/francais-definition/%C3%A9tudes+acad%C3%A9miques" target="_blank">
         <div class="Ecole">
 
@@ -1779,8 +1786,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figure>
     </div>
 
-  <div class="KA"style="display: flex; justify-content: center; align-items: center;">
-    <p style="color:#0274fff9; font-size: 17px; font-family: 'trebuchet ms', Helvetica, sans-serif; text-align: left; padding: 10px; line-height: 22px;">
+  <div class="KA"style="display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
+    <p style="color:#0274fff6; font-size: 21.43px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: left; padding: 19px; line-height: 23px;">
       Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre adapté nommé Accadémie Tiki N'Yiki.
       Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer un bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
        pour la mobilité en cas de nécessité.
@@ -1789,6 +1796,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </div>
       </div>
       </a>
+      <br>
       <br>
         En étant handicapés, pouvoir loger et étudier au centre Tiki N'Yiki établi en ville sera synonyme de proximité d'importants services comme l'hôpital, les lieux de culte, les centres d'achat, les lieux de sport, de divertissement. 
         Au déla de cette vie en ville, la discrimination va s'amoindrir vis-à-vis de la vie en campagne ou l'inclusion est très balbutiante voire inexistante. 
@@ -2191,4 +2199,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
