--- a/index.html
+++ b/index.html
@@ -526,6 +526,7 @@ hr{
  color:rgba(151, 149, 149, 0.975);
  word-spacing: 1px;
  border: 0.1rem solid rgba(179, 179, 179, 0.744);
+ background: transparent;
  
 }
 
@@ -1733,7 +1734,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="padding: 5px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 21px; color:rgba(31, 145, 211, 0.838); font-size: 18.85px;">
+    <div style="padding: 5px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 22px; color:rgba(10, 173, 249, 0.92); font-size: 18.8px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs diverses réactions. 
@@ -2199,6 +2200,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
 
