--- a/index.html
+++ b/index.html
@@ -229,12 +229,13 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 126px; 
+            height: 124px; 
             background: #e5e5e5ed;
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
             padding: 0.5rem;
+            border-bottom: 0.5rem solid rgba(255, 68, 0, 0.797);
           }
           
           .Joint-Point{
@@ -2200,7 +2201,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
-
-
 
 
