--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   width: 97%;
   font-family: 'trebuchet ms';
   font-size: 13px; 
-  color: #000;
+  color: #7c7c7cfc;
   padding: 5px;
   margin-top: -0.85rem;
 }
@@ -109,9 +109,9 @@
     }
 
     .Translator:hover{
-      transition: 0.2s ease-in;
+      transition: 0.3s ease-in;
       width: 100%;
-      color: yellow;
+      color: rgba(3, 9, 37, 0.982);
     }
 
     .Calculator{
@@ -129,9 +129,9 @@
     }
 
     .Calculator:hover{
-      transition: 0.2s ease-in;
+      transition: 0.3s ease-in;
       width: 100%;
-      color: yellow;
+      color: rgba(3, 9, 37, 0.982);
     }
     
     .dico{
@@ -149,9 +149,9 @@
     }
 
     .dico:hover{
-      transition: 0.2s ease-in;
+      transition: 0.3s ease-in;
       width: 100%;
-      color: yellow;
+      color: rgba(3, 9, 37, 0.982);
     }
 
     .datime{
@@ -169,9 +169,9 @@
     }
 
     .datime:hover{
-      transition: 0.2s ease-in;
+      transition: 0.3s ease-in;
       width: 100%;
-      color: yellow;
+      color: rgba(3, 9, 37, 0.982);
     }
 
     
@@ -180,14 +180,14 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#35a9e3e0,#35b6f7ee);
+                 background: -webkit-linear-gradient(#38b3f0d6,#38b3f0e0);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.5px 1.65rem 0.1px #6161614f;
+                 box-shadow: 0 0.5px 1.65rem 0.1px #47474748;
                  border-bottom: 4.40rem solid #fffffff7;  
                  border-top-left-radius: 1.95rem;
                  border-top-right-radius: 1.95rem;
@@ -464,7 +464,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #37aeeae0;
+    background: #38b3f0d6;
     justify-content: center;
     align-items: center;
     padding: 10px;
@@ -1074,20 +1074,20 @@ a:visited{
 
 .DUQUE{
   display: grid; 
-  grid-template-rows: 0.25fr 0.9fr;
-  row-gap: 0.25rem;
+  grid-template-rows: 0.1fr 0.12fr;
+  row-gap: 0.15rem;
   justify-content: center;
   justify-items: center;
   width: 100%;
-  height: 1205px;
+  height: auto;
   padding: 5px;
 }
 .DUQUE1{
   display: grid; 
-  grid-template-columns: 0.5fr 0.5fr;
+  grid-template-columns: 0.45fr 0.45fr;
   justify-content: space-between;
   justify-items: center;
-  column-gap: 1rem;
+  column-gap: 0.5rem;
   width: 100%;
   height: 290px;
 }
@@ -1127,14 +1127,14 @@ height: 240px;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 0.5fr 0.5fr;
-  row-gap: 0.5rem;
+  grid-template-rows: 0.2fr 1fr;
+  row-gap: 0.25rem;
     background: #fffffff9;
     justify-items: center;
     justify-content: space-between;
     text-align: justify;
     width: 72.5%;
-    height: 870px;
+    height: auto;
     line-height: 27px;
     font-size: 20.5px; 
     color: rgba(8, 8, 8, 0.897);
@@ -1653,8 +1653,8 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="PERCU">
 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Percussion djembé">
 <figure>
-<figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 13px; text-align: left;">
-  Après les cours de soutien, la percussion est un moment préféré pour les enfants
+<figcaption style="color: #017ffe; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 15px; font-size: 15px; text-align: left; line-height: 19px;">
+  Après les cours de soutien, la percussion était un moment préféré pour les enfants. Ceux qui se sont remarqués par leur participation active pendant le cours avaient droit à jouer au djembé.
 </figcaption>
 </figure>
 </div>
@@ -1666,7 +1666,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="SUNSET">
   <img src="https://www.zupimages.net/up/23/23/gwuk.png" alt="Soleil couchant">
 <figure>
-<figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 13px; text-align: left;">
+<figcaption style="color: #017ffe; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 15px; font-size: 15px; text-align: left; line-height: 19px;">
   Soleil couchant
 </figcaption>
 </figure>
@@ -1967,7 +1967,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-           Bon Docteur
+           Bon Docteur et son Coeur
             </figcaption>
     </figure>
     </div>
@@ -2203,3 +2203,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
