--- a/index.html
+++ b/index.html
@@ -997,8 +997,8 @@ height: 728px;
   flex-direction: column;
   justify-content: center; 
   align-items: center; 
-  background: transparent; 
-  border: 0.13rem solid #b3b3b3; 
+  background: rgba(38, 38, 38, 0.755); 
+  border: 0.12rem solid #b3b3b3; 
   border-radius: 50%; 
   font-family: 'georgia'; 
   font-size: 20px; 
@@ -2203,5 +2203,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
