--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ hr{
 }
 
 .YT:hover{
-  border: none;
+  border: 0.1rem solid rgba(179, 179, 179, 0.744);
   transition: 0.46s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
  }
@@ -2203,6 +2203,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
 
