--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.5px 1.35rem 0.1px #7b7b7b7d;
+                 box-shadow: 0 0.3px 0.89rem 0.1px #8b8b8b7d;
                  border-bottom: 4.40rem solid #fffffff7;  
                  border-top-left-radius: 1.95rem;
                  border-top-right-radius: 1.95rem;
@@ -464,7 +464,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #38b3f1d6;
+    background: #f0efefa4;
     justify-content: center;
     align-items: center;
     padding: 10px;
@@ -494,17 +494,17 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fffffff8;
-    width: 87%;
+    background: transparent;
+    width: 86%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
     font-size: 17.25px;
     text-align: left;
-    padding-top: 5rem; 
     opacity: 0.97;
-    margin-top: 0.75rem;
     margin-bottom: 1rem;
+    border-right: 0.15rem dashed #0ab9ff;
+    border-left: 0.15rem dashed #0ab9ff;
     border-bottom-right-radius: 10rem;
     border-bottom-left-radius: 10rem;
 }
@@ -519,7 +519,7 @@ hr{
   width: 72%;
   justify-content: center;
   justify-items: center;
-  height: 362px;
+  height: 348px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
  line-height: 25px; 
  font-size: 23px; 
@@ -654,7 +654,7 @@ opacity: 1;
   width: 72%;
   height: 516;
   border: 0.11rem solid rgba(203, 203, 203, 0.876); 
-  margin-top: 3.8rem;
+  margin-top: 1rem;
 }
 
 .Glober:hover{
@@ -813,6 +813,7 @@ animation: auto 12s infinite ease-in;
   opacity: 0.98;
   text-align: left;
   font-family: 'Inter' sans sherif;
+  padding: 5px;
 }
 .kpt:hover{
   transition: 0.46s linear;
@@ -821,7 +822,7 @@ animation: auto 12s infinite ease-in;
 
 .kgp{
     display: grid;
-    background: #fffffff9;
+    background: #f3f3f3a4;
     justify-items: center;
     justify-content: center;
     text-align: left;
@@ -1129,7 +1130,7 @@ height: 240px;
   display: grid;
   grid-template-rows: 0.2fr 1fr;
   row-gap: 0.25rem;
-    background: #fffffff9;
+  background: #f5f5f5a4;
     justify-items: center;
     justify-content: space-between;
     text-align: justify;
@@ -1585,9 +1586,10 @@ function myFunction() {
         Heureusement elle se diversifie à travers d'autres secteurs comme les services et le secteur des nouvelles technologies.  
         <br>
         <br> 
-        Par ailleurs son économie reste fortement impactée par une crise sécuritaire qui sécoue la sous-région y compris le Mali et le Niger dont il partage des frontières communes et le tout dans une réalité d'inflation globale. Ce qui rend incertain les lendemains pour de nombreux Burkinabès surtout les déplacés internes.     
-          
-        Malgré une population croissante de plus de 3 226 627 de personnes handicapées <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank"> [Sources: African Disability - 2020 Rights Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est causé soit par la Polio (poliomyétlie), soit d'autres maladies, de vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
+        Bien que l'économie est fortement impactée par les crises sécuritaire et humanitaire qui sécouent la sous-région y compris le Mali et le Niger dont il partage des frontières commune, le peuple Burkinabè reste toujours debout et espère par de sa jeunesse 
+        arriver au changement positif des conditions sociales de vie.
+
+        Par contre avec une population croissante de plus de 3 226 627 de personnes handicapées  <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Sources: African Disability - 2020 Rights Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est généralement causé soit par la Polio (poliomyétlie), soit d'autres maladies, soit de vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
         <br> 
         <br> 
         Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
@@ -1738,7 +1740,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="padding: 5px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 22px; color:rgba(10, 173, 249, 0.92); font-size: 18.8px;">
+    <div style="padding: 2px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 21px; color:rgba(6, 171, 248, 0.968); font-size: 18.8px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs diverses réactions. 
@@ -1746,8 +1748,8 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <div>
 <img src="https://zupimages.net/up/22/31/z42x.jpg">
 <figure>
-<figcaption style="font-family: 'arial black'; font-size: 15px; color: #1c97d5;">
- Noël 2016 organisé par Tiki N'Yiki au profit des enfants
+<figcaption style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 17px; color: #0a9fd6;">
+ Arbre de Noël 2016 organisé par Tiki N'Yiki au secteur 1 de Ziniaré
 </figcaption>
 </figure>
 </div>
@@ -1785,14 +1787,14 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://cdn-icons-png.flaticon.com/512/167/167707.png" alt="Icon of a school building">
         <figure>
             <figcaption style="font-family: 'arial'; font-size: 12px; color: #017ffe; margin-top: -1rem;">
-              Un type de building pour l'Accadémie Tiki N'Yiki
+              Type de building pour l'Accadémie Tiki N'Yiki
             </figcaption>
           </figure>
       </figure>
     </div>
 
   <div class="KA"style="display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
-    <p style="color:#0274fff6; font-size: 21.43px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: left; padding: 19px; line-height: 23px;">
+    <p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: #06749c; text-align: justify; padding: 14px; line-height: 23px;">
       Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre adapté nommé Accadémie Tiki N'Yiki.
       Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer un bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
        pour la mobilité en cas de nécessité.
@@ -1967,7 +1969,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-           Bon Docteur et son Coeur
+           Je suis Docteur. Je n'ai pas Peur.
             </figcaption>
     </figure>
     </div>
@@ -2203,5 +2205,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
