--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.5px 1.9rem 0.1px #9e9e9e52;
-                 border-bottom: 4.40rem solid #fffffffc;  
+                 box-shadow: 0 0.5px 1.9rem 0.1px #9e9e9e64;
+                 border-bottom: 4.48rem solid #fffffffd;  
           }
           
           
@@ -251,13 +251,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.542rem;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 19px;
+            margin-top: 0.6rem;
           }
 
           .myDiv:hover{
@@ -273,13 +273,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.542rem;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 19px;
+            margin-top: 0.6rem;
           }
 
           .myDiv1:hover{
@@ -294,13 +294,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.542rem;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 19px;
+            margin-top: 0.6rem;
             }
 
           .myDiv2:hover{
@@ -315,13 +315,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.542rem;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 19px;
+            margin-top: 0.6rem;
            }
 
           .myDiv3:hover{
@@ -336,13 +336,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            font-size: 17px;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 19px;
+            margin-top: 0.6rem;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.542rem;
             }
 
           .myDiv6:hover{
@@ -462,7 +462,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #f0efefa4;
+    background: #ececec5f;
     justify-content: center;
     align-items: center;
     padding: 10px;
@@ -517,7 +517,7 @@ hr{
   width: 72%;
   justify-content: center;
   justify-items: center;
-  height: 348px;
+  height: 345.5px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
  line-height: 25px; 
  font-size: 23px; 
@@ -2203,6 +2203,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
 
 
