--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
-        background: -webkit-linear-gradient(rgb(28, 28, 28), rgba(34, 34, 34, 0.852));
+        background: -webkit-linear-gradient(rgb(32, 32, 32), rgba(42, 42, 42, 0.852));
         background-size: cover;
         object-fit:cover;
         color: #fff;
@@ -462,7 +462,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #ececec5f;
+    background: #dfdfdf3d;
     justify-content: center;
     align-items: center;
     padding: 10px;
@@ -474,7 +474,7 @@ hr{
    
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(201, 201, 201, 0.905);
+    background: rgba(161, 161, 161, 0.839);
     width: auto;
     padding: 20px;
 }
@@ -1729,7 +1729,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 
     <p><span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: right;">
       <strong>
-        Pourquoi Tiki N'Yiki ?
+        Pourquoi la Vision Tiki N'Yiki ?
       </strong>
     </span>
 <br>
@@ -1738,7 +1738,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="padding: 2px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 21px; color:rgba(6, 171, 248, 0.968); font-size: 18.8px;">
+    <div style="padding: 5px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 20.5px; color:rgba(4, 25, 35, 0.471); font-size: 18.5px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs diverses réactions. 
@@ -1778,7 +1778,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         Certains handicapés n'ont pas de moyens financiers pour s'offrir de moyens de déplacements comme des tricycles. Elles n'ont pas d'aides financières ou de dotations d'équipements auxiliaires de l'état. Certain-es vivent isolé-es dans des coins réculés en campagne et n'ont ni voiture, ni moto ou même un tricycle pour se déplacer. 
         <br>
         <br>
-        <a href="https://dictionnaire.reverso.net/francais-definition/%C3%A9tudes+acad%C3%A9miques" target="_blank">
+        <a href="https://png-library.net/images/77-770631_parents-of-seniors-black-and-gold-graduation-cap.png" target="_blank">
         <div class="Ecole">
 
         <div class="AK">
@@ -1792,9 +1792,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
 
   <div class="KA"style="display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
-    <p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: #06749c; text-align: justify; padding: 14px; line-height: 23px;">
-      Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre adapté nommé Accadémie Tiki N'Yiki.
-      Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer un bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
+    <p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: #06749c; text-align: justify; padding: 14px; line-height: 22.85px;">
+      Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement adapté d'étude nommé Accadémie Tiki N'Yiki pour soutenir les élèves et étudiant-es en situation de handicap.
+      Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
        pour la mobilité en cas de nécessité.
     </p>
    <br>
@@ -2203,8 +2203,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
-
-
-
 
 
