--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@ height: 240px;
   display: grid;
   grid-template-rows: 0.2fr 1fr;
   row-gap: 0.25rem;
-  background: #fefdfd8d;
+  background: transparent;
     justify-items: center;
     justify-content: space-between;
     text-align: justify;
@@ -2203,4 +2203,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </html>
 </html>
+
 
