--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sharing photos, movies, telling stories, talking about a photo-dialogue that gathers people and then to debate, learning from each other, from close regions to remote ones, humunazing a world by words, observations and analyses, conversations for a better understanding, building a social harmony talking about some thematics in our communities where we're living. Having conclusions as frames and a scheme to better future projects after those conversations will be lighting another future about different matters including the disability, the diversity and more inclusion.  Still isolating disabled people in certain regions worldwide will jeopardize their lives but also the community in general. But including them (Disabled people) will mitigate manay of countless hugely repercussions given they are living witth disabilities. Doing that will probably enhance a social cohesion and harmonize our communities. As human-being we can't afford to fail in doing it. That's why some wonderful localities, regions, people, animals, birds, wildlife, nature pics may need to get to known, be appreciated or not.">
+    <meta name="description" content="Sharing photos, movies, telling stories, talking about a photo-dialogue that gathers people and then to debate, learning from each other, from close regions to remote ones, observations and analyses, conversations for a better understanding, building a social harmony talking about some thematics in our communities where we're living. Having conclusions as frames and a scheme to better future projects after those conversations will be lighting another future about different matters including the disability, the diversity and more inclusion.  Still isolating disabled people in certain regions worldwide will jeopardize their lives but also the community in general. But including them (Disabled people) will mitigate manay of countless hugely repercussions given they are living witth disabilities. Doing that will probably enhance a social cohesion and harmonize our communities. As human-being we can't afford to fail in doing it. That's why some wonderful localities, regions, people, animals, birds, wildlife, nature pics may need to get to known, be appreciated or not.">
     <meta name="keywords" content="saxiwama,saxiwama,culture,Photos,pictures,landscapes,nature,animals,Africa,Europe,America,disability,inclusion,photography">
     <meta name="twitter:card" content="summary">
     <meta property="og:site_name" content="saxiwama">
@@ -2202,6 +2202,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
