--- a/index.html
+++ b/index.html
@@ -1071,9 +1071,9 @@ a:visited{
 
 .DUQUE{
   display: grid; 
-  grid-template-rows: 0.1fr 0.12fr;
+  grid-template-rows: 0.09fr 0.07fr;
   row-gap: 0.15rem;
-  justify-content: center;
+  justify-content: space-between;
   justify-items: center;
   width: 100%;
   height: auto;
@@ -1081,19 +1081,19 @@ a:visited{
 }
 .DUQUE1{
   display: grid; 
-  grid-template-columns: 0.45fr 0.45fr;
+  grid-template-columns: 0.5fr 0.5fr;
   justify-content: space-between;
   justify-items: center;
   column-gap: 0.5rem;
   width: 100%;
-  height: 290px;
+  height: 200px;
 }
 
 
 
 .ORDI1 img{
 width: 100%;
-height: 240px;
+height: 220px;
 }
 
 .ORDI1:hover{
@@ -1103,7 +1103,7 @@ height: 240px;
 
 .ORDI2 img{
 width: 100%;
-height: 240px;
+height: 220px;
 }
 
 .ORDI2:hover{
@@ -1124,7 +1124,7 @@ height: 240px;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 0.2fr 1fr;
+  grid-template-rows: 0.2fr 0.5fr;
   row-gap: 0.25rem;
   background: #f9f9f90d;
     justify-items: center;
@@ -1146,7 +1146,7 @@ height: 240px;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 350px;
+  height: auto;
   line-height: 27px;
     font-size: 20.5px; 
     color: rgba(8, 8, 8, 0.897);
@@ -1192,12 +1192,12 @@ transition: 0.46s linear;
 
 .SEKU{
   display: grid;
-  grid-template-rows: 0.15fr 0.5fr;
+  grid-template-rows: 0.1fr 0.1fr;
   row-gap: 0.15rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 740px;
+  height: auto;
   line-height: 27px;
     font-size: 20.5px; 
     color: rgba(8, 8, 8, 0.897);
@@ -1221,7 +1221,7 @@ transition: 0.46s linear;
 
 .Avenue:hover{
   transition: 0.46s linear;
-  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(171, 171, 171, 0.724);
 }
 
 .CC{
@@ -2114,7 +2114,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
                 <span style="padding: 15px; background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
                   <strong>
-                   Promoteur et Webmaster du Site
+                   Promoteur et Développeur du Site Web
                   </strong>
                 </span>
                 
@@ -2155,7 +2155,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
       <figure>
         <figcaption style="font-family: 'verdana'; font-size: 13px; color: rgb(71, 71, 71); margin-top: 0.5rem;">
-        Gabriel à <a href="https://www.stcomelanaudiere.ca/" target="_blank"> Saint-Côme </a>* Lanaudière 
+        <a href="https://www.stcomelanaudiere.ca/" target="_blank"> Saint-Côme </a>* Lanaudière 
         <br>
         [Juin 2023 Quebec]
       </figcaption> 
@@ -2200,4 +2200,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
