--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.5px 2rem 0.14px #9191916e;
-                 border-bottom: 5.5rem solid #fff;  
+                 box-shadow: 0 0.25px 1.5rem 0.14px #20c8f642;
+                 border-bottom: 5.5rem solid #ffffff;  
           }
           
           .TYK1{
@@ -224,7 +224,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 124px; 
-            background: #e8e8e8f1;
+            background: #e1e1e1f7;
             color: rgba(25, 63, 166, 0.795);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
@@ -2196,6 +2196,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
