--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
                  justify-items: center;
                  background: rgba(2, 0, 135, 0.972);
                  width: 100%;
-                 height: 120px;
+                 height: 115px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
                  box-shadow: 0 0.25px 1.35rem 0.14px #24c9f731;
-                 border-bottom: 5.5rem solid #ffffff;  
+                 border-bottom: 5.35rem solid #ffffff;  
           }
           
           .TYK1{
@@ -206,7 +206,7 @@
   border: 0.1rem solid #dd346faa;
   color:darkblue;
   padding: 3px;
-  margin-top: 12px;
+  margin-top: 9px;
   margin-left: -1.96rem;
 }
 
@@ -219,19 +219,25 @@
           .navbar0{
             display: grid;
            grid-template-columns: 0.5fr 1.5fr;
-            justify-content: center;
+            justify-content: left;
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
             height: 124px; 
             background: #e1e1e1f7;
-            color: rgba(25, 63, 166, 0.795);
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-            font-size: 2rem;
-            padding: 0.5rem;
             border-bottom: 0.5rem solid rgba(255, 85, 0, 0.815);
           }
-          
+          .BIEN{
+            display: grid;
+            grid-template-rows: 1fr;
+            justify-content: center; 
+            justify-items: center;
+            color: rgba(17, 54, 156, 0.795);
+            font-family:'arial black'; 
+            font-size: 1.8rem;
+            color: #2d34b5; 
+            text-align: left;
+          }
           .Joint-Point{
             display: grid;
             grid-template-columns: 0.25fr 1fr;
@@ -1405,7 +1411,7 @@ function myFunction() {
   </div>
   </a>
 
-  <div style="display: grid; justify-content: center; justify-items: center; color: #2d34b5; font-family: 'arial black'; font-size: 27px; text-align: center; margin-top: 1rem;">
+  <div class="BIEN">
   Bienvenue ! Ce site web est en développement. 
 <br>
   Merci pour la compréhension ! Bonne Visite !</p>
@@ -2196,6 +2202,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
