--- a/index.html
+++ b/index.html
@@ -772,9 +772,9 @@ animation: auto 12s infinite ease-in;
 
 .Noel{
   display: grid;
-  grid-template-columns: 0.5fr 1.3fr;
+  grid-template-columns: 0.5fr 1.5fr;
   justify-content: space-between;
-  column-gap: 1rem;
+  column-gap: 0.25rem;
   justify-items: center;
   width: 100%;
   height: auto;
@@ -783,13 +783,13 @@ animation: auto 12s infinite ease-in;
 .Noel:hover{
   padding: 2px;
   transition: 0.46s linear;
-  box-shadow: 8px 8px 0.6rem 0.45px rgba(190, 190, 190, 0.724);
+  box-shadow: 8px 8px 0.6rem 0.45px rgba(196, 196, 196, 0.724);
   border-bottom: 1rem;
 }
 
 .Noel img{
   width: 100%;
-  height: 87%;
+  height: auto;
 }
 
 .kptr{
@@ -1738,7 +1738,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="padding: 5px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-align: left; line-height: 21px; color:rgba(12, 71, 84, 0.915); font-size: 18px;">
+    <div style="padding: 5px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-align: left; line-height: 21px; color:rgba(0, 20, 94, 0.944); font-size: 18px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs diverses réactions. 
@@ -2202,6 +2202,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
