--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ opacity: 1;
 .YTP:hover{
   color:green;
   border: none;
-  transition: 0.46s linear;
+  transition: 0.36s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -576,7 +576,7 @@ opacity: 1;
 }
 
 .YTPP:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -616,7 +616,7 @@ opacity: 1;
 .TYP:hover{
   color: #000;
   padding: 3px;
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -656,7 +656,7 @@ opacity: 1;
 }
 
 .Glober:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -782,7 +782,7 @@ animation: auto 12s infinite ease-in;
 }
 .Noel:hover{
   padding: 2px;
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.45px rgba(196, 196, 196, 0.724);
   border-bottom: 1rem;
 }
@@ -806,31 +806,45 @@ animation: auto 12s infinite ease-in;
   font-family: 'verdana';
   font-size: 13.5px;
   line-height: 21px;
-  color: rgba(8, 8, 8, 0.982);
+  color: rgba(45, 45, 45, 0.934);
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
   font-family: 'Inter' sans sherif;
   padding: 5px;
+  background: #fff;
+  border-right: 0.25rem solid transparent;
+  border-top: 0.25rem solid transparent;
+  
 }
 .kpt:hover{
-  transition: 0.46s linear;
+  transition: 0.25s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  background: #fcfcfcea;
+  color:rgb(0, 0, 0);
+  border-right: 0.25rem solid #8eabc8;
+  border-top: 0.25rem solid #8eabc8;
+
 }
 
 .kgp{
     display: grid;
-    background: #f3f3f3a4;
+    background: #ffffff9c;
     justify-items: center;
     justify-content: center;
     text-align: left;
     width: 100%;
-    height: 46%;
+    height: 45%;
+    border-left: 0.25rem solid transparent;
+  border-top: 0.25rem solid transparent;
 }
 
 .kgp:hover{
-  transition: 0.46s linear;
-  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  transition: 0.26s linear;
+  box-shadow: -8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  border-left: 0.25rem solid #8eabc8;
+  border-top: 0.25rem solid #8eabc8;
+  background: #fcfcfcea;
 }
 
 .kgp img{
@@ -885,7 +899,7 @@ animation: auto 12s infinite ease-in;
 }
 
 .AFRI:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   padding: 5px;
 }
@@ -895,13 +909,13 @@ animation: auto 12s infinite ease-in;
 }
 
 .BUR:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   padding: 5px;
 }
 
 .PERCU:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -910,7 +924,7 @@ animation: auto 12s infinite ease-in;
 height: 728px;
 }
 .SUNSET:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -1038,13 +1052,13 @@ a:visited{
 
 .AK:hover{
   padding: 4px;
-  transition: 0.3s linear;
+  transition: 0.28s linear;
   box-shadow: 8px 5px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   border-left: 0.05rem solid rgba(245, 245, 245, 0.948);
 }
 
 .KA:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 5px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -1062,7 +1076,7 @@ a:visited{
   
 }
 .student:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.25px rgba(171, 171, 171, 0.724);
 }
 
@@ -1099,7 +1113,7 @@ height: 220px;
 }
 
 .ORDI1:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -1109,7 +1123,7 @@ height: 220px;
 }
 
 .ORDI2:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -1168,7 +1182,7 @@ height: 220px;
   height: 240px;
 }
 .CHRZiniare:hover{
-transition: 0.46s linear;
+transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   border: none;
 }
@@ -1186,7 +1200,7 @@ transition: 0.46s linear;
   }
 
 .MediKLogo:hover{
-transition: 0.46s linear;
+transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   border: none;
 }
@@ -1222,7 +1236,7 @@ transition: 0.46s linear;
 }
 
 .Avenue:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(171, 171, 171, 0.724);
 }
 
@@ -1241,7 +1255,7 @@ transition: 0.46s linear;
 }
 
 .CC1:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -1250,7 +1264,7 @@ transition: 0.46s linear;
   height: 85%;
 }
 .CC2:hover{
-  transition: 0.46s linear;
+  transition: 0.26s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -2202,6 +2216,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
