--- a/index.html
+++ b/index.html
@@ -803,6 +803,8 @@ animation: auto 12s infinite ease-in;
 }
 
 .kpt{
+  width: 100%;
+  height: auto;
   font-family: 'verdana';
   font-size: 13.5px;
   line-height: 21px;
@@ -811,7 +813,7 @@ animation: auto 12s infinite ease-in;
   opacity: 0.98;
   text-align: left;
   font-family: 'Inter' sans sherif;
-  padding: 5px;
+  padding: 7px;
   background: #fff;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
@@ -820,23 +822,25 @@ animation: auto 12s infinite ease-in;
 .kpt:hover{
   transition: 0.25s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
-  background: #fcfcfcea;
+  background: #f5f5f5d3;
   color:rgb(0, 0, 0);
   border-right: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
+  border-radius: 0.5rem;
 
 }
 
 .kgp{
     display: grid;
-    background: #ffffff9c;
+    background: #fefefe9c;
     justify-items: center;
     justify-content: center;
     text-align: left;
     width: 100%;
     height: 45%;
     border-left: 0.25rem solid transparent;
-  border-top: 0.25rem solid transparent;
+    border-top: 0.25rem solid transparent;
+    padding: 5px;
 }
 
 .kgp:hover{
@@ -844,7 +848,8 @@ animation: auto 12s infinite ease-in;
   box-shadow: -8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   border-left: 0.25rem solid #8eabc8;
   border-top: 0.25rem solid #8eabc8;
-  background: #fcfcfcea;
+  background: #f5f5f5d3;
+  border-radius: 0.5rem;
 }
 
 .kgp img{
@@ -2216,6 +2221,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
