--- a/index.html
+++ b/index.html
@@ -234,9 +234,10 @@
             justify-items: center;
             color: rgba(17, 54, 156, 0.795);
             font-family:'arial black'; 
-            font-size: 1.8rem;
+            font-size: 1.75rem;
             color: #2d34b5; 
             text-align: left;
+            margin-top: 1rem;
           }
           .Joint-Point{
             display: grid;
@@ -258,14 +259,14 @@
             background: transparent;
             color: rgba(0, 0, 173, 0.972);
             font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 18.5px;
-            margin-top: 1.3rem;
+            font-size: 18px;
+            margin-top: 1.15rem;
           }
 
           .myDiv:hover{
             border-bottom: 1rem solid #000;
-      color: red;
-      transition: 0.28s ease-in;
+            color: red;
+           transition: 0.28s ease-in;
       
           }
 
@@ -280,14 +281,14 @@
             background: transparent;
             color: rgba(0, 0, 173, 0.972);
             font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 18.5px;
-             margin-top: 1.3rem;
+            font-size: 18px;
+            margin-top: 1.15rem;
           }
 
           .myDiv1:hover{
             border-bottom: 1rem solid #000;
             color: red;
-      transition: 0.28s ease-in;
+            transition: 0.28s ease-in;
           }
 
           .myDiv2{
@@ -301,14 +302,14 @@
             background: transparent;
             color: rgba(0, 0, 173, 0.972);
             font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 18.5px;
-            margin-top: 1.3rem;
+            font-size: 18px;
+            margin-top: 1.15rem;
             }
 
           .myDiv2:hover{
             border-bottom: 1rem solid #000;
             color: red;
-      transition: 0.28s ease-in;
+            transition: 0.28s ease-in;
           }
 
           .myDiv3{
@@ -322,14 +323,14 @@
             background: transparent;
             color: rgba(0, 0, 173, 0.972);
             font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 18.5px;
-             margin-top: 1.3rem;
+            font-size: 18px;
+            margin-top: 1.15rem;
            }
 
           .myDiv3:hover{
             border-bottom: 1rem solid #000;
             color: red;
-      transition: 0.28s ease-in;
+            transition: 0.28s ease-in;
           }
 
           .myDiv6{
@@ -340,17 +341,17 @@
             cursor: pointer;
             color: rgba(0, 0, 173, 0.972);
             font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 18.5px;
+            font-size: 18px;
             height: 40px;
             width: 100%;
             background: transparent;
-            margin-top: 1.3rem;
+            margin-top: 1.15rem;
             }
 
           .myDiv6:hover{
             border-bottom: 1rem solid #000;
             color: red;
-      transition: 0.28s ease-in;
+            transition: 0.28s ease-in;
           }
 
 
@@ -1379,26 +1380,26 @@ function myFunction() {
 
         <a href="https://tikiyiki.github.io/bu/">
         <div class="myDiv">
-          <b>Tiki N'Yiki</b>
+          <b>Education</b>
         </div>
             </a>
 
 
     <a href="https://www.education.gov.bf/accueil" target="blank"> 
         <div class="myDiv1">  
-          <b>Education</b>
+          <b>Santé et Soins </b>
         </div>
     </a>
 
             <a href="https://www.sante.gov.bf/accueil" target="blank"> 
                 <div  class="myDiv2">
-                  <b>Santé et Soins </b>
+                  <b>Sécurité alimentaire</b>
             </div>
             </a>
 
             <a href="https://www.wfp.org/countries/burkina-faso" target="blank"> 
                 <div  class="myDiv3">
-                  <b>Sécurité alimentaire</b>
+                  <b>Painting</b>
                 </div>
             </a>
 
@@ -2221,6 +2222,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
