--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(2, 0, 135, 0.972);
+                 background: rgb(4, 2, 162);
                  width: 100%;
                  height: 115px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.25px 1.35rem 0.14px #27c9f628;
-                 border-bottom: 5.35rem solid #ffffff;  
+                 box-shadow: 0 0.25px 1.5rem 0.14px #26c5fa49;
+                 border-bottom: 5.30rem solid #ffffff;  
           }
           
           .TYK1{
@@ -2222,13 +2222,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
-
 
 
 
