--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: transparent;
+    background: rgba(211, 211, 211, 0.931);
     justify-content: center;
     align-items: center;
     padding: 10px;
@@ -477,7 +477,7 @@ hr{
    
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(174, 174, 174, 0.839);
+    background: rgba(122, 122, 122, 0.67);
     width: auto;
     padding: 20px;
 }
@@ -495,8 +495,8 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: transparent;
-    width: 87.2%;
+    background: #fff;
+    width: 94.5%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
@@ -504,8 +504,11 @@ hr{
     text-align: left;
     opacity: 0.97;
     margin-bottom: 1rem;
+    margin-top: 0.35rem;
     border-bottom-right-radius: 5rem;
     border-bottom-left-radius: 5rem;
+    padding: 10px;
+    box-shadow: 0 2px 1.5rem 0 rgba(109, 109, 109, 0.978);
 }
 .content1 a:hover{
     color: blue;
@@ -2222,6 +2225,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
