--- a/index.html
+++ b/index.html
@@ -1761,7 +1761,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="padding: 5px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-align: left; line-height: 20.5px; color:rgba(0, 20, 94, 0.944); font-size: 20px;">
+    <div style="padding: 5px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-align: left; line-height: 20px; color:rgb(0, 156, 203); font-size: 19.45px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs diverses réactions. 
@@ -1769,7 +1769,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <div>
 <img src="https://zupimages.net/up/22/31/z42x.jpg">
 <figure>
-<figcaption style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 17px; color: #0a9fd6;">
+<figcaption style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 16.16px; color: darkmagenta;">
  Arbre de Noël 2016 organisé par Tiki N'Yiki au secteur 1 de Ziniaré
 </figcaption>
 </figure>
@@ -2225,4 +2225,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
